--- a/app/views/books/edit.scala.html
+++ b/app/views/books/edit.scala.html
@@ -1,13 +1,13 @@
 @(bookForm: Form[Book])
 
 @import helper._
+@import views.html.partials._bookFormFields
 @layout("Edit book") {
     <h1>Edit Book</h1>
     @helper.form(CSRF(routes.BookController.update())) {
-        @helper.inputText(bookForm("id"))
-        @helper.inputText(bookForm("title"))
-        @helper.inputText(bookForm("price"))
-        @helper.inputText(bookForm("author"))
-        <input type="submit" value="Edit Book">
+        @_bookFormFields(bookForm)
+        <button class="btn btn-primary" type="submit">
+            Edit Book
+        </button>
     }
 }
