--- a/app/views/books/index.scala.html
+++ b/app/views/books/index.scala.html
@@ -3,9 +3,8 @@
 @layout("Book List") {
     <h1>Book List</h1>
     @for(book <- books) {
-        <a href="@routes.BookController.show(book.id)">@book.title</a>
+        <a class="btn btn-link" href="@routes.BookController.show(book.id)">@book.title</a>
         <p>Price: @book.price</p>
         <p>Author: @book.author</p>
     }
-    <a href="@routes.BookController.create()">Create</a>
 }
