--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,6 @@
-@()
-
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@layout("All Books") {
+  <div class="jumbotron">
+    <h1>Welcome to BookStore App</h1>
+    <h3>Built using Play Framework 2.6</h3>
+  </div>
 }
