--- a/app/views/books/show.scala.html
+++ b/app/views/books/show.scala.html
@@ -6,5 +6,11 @@
     <p>Author: @book.author</p>
 
     <a class="btn btn-primary" href="@routes.BookController.edit(book.id)">Edit</a>
-    <a class="btn btn-danger" href="@routes.BookController.destroy(book.id)">Delete</a>
+
+    <button id="delete-book"
+            data-url=" @helper.CSRF(routes.BookController.destroy(book.id))"
+            data-r-url="@routes.BookController.index()"
+            class="btn btn-danger">
+        Delete
+    </button>
 }
