--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -53,5 +53,6 @@
 
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/jquery-3.3.1.js")'></script>
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/bootstrap.js")'></script>
+        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/custom.js")'></script>
     </body>
 </html>
